Fixed spacing

--- a/bloom-and-vine/src/App.css
+++ b/bloom-and-vine/src/App.css
@@ -1,44 +1,43 @@
 html {
 	scroll-behavior: smooth;
-  	height: fit-content;
 }
 
 .App {
 	text-align: center;
+	min-height: calc(100vh - 100px)
 }
 
 .App-logo {
-  	height: 40vmin;
-  	pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  	.App-logo {
-	    animation: App-logo-spin infinite 20s linear;
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
 	}
 }
 
 .App-header {
-  	background-color: #282c34;
-  	min-height: calc(100vh - 400px);
+	background-color: #282c34;
+	min-height: calc(100vh - 400px);
 	display: flex;
-  	flex-direction: column;
-  	align-items: center;
-  	justify-content: center;
-  	font-size: calc(10px + 2vmin);
-  	color: white;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  	color: #61dafb;
+	color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  	from {
-    	transform: rotate(0deg);
-  	}
-	
-  	to {
-    	transform: rotate(360deg);
-  	}
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
